# StatBucket-2.0

./: .gitignore  README.md  database.py  doc.html  example_doctests.py  notebook  pyproject.toml
.github/: copilot-instructions.md
docs/: conf.py  database.md  index.rst  modules.rst  nba_scraper.column_handlers.rst  nba_scraper.data_pipeline.rst  nba_scraper.database_schema.rst  nba_scraper.dynamic_schema.rst  nba_scraper.migration_system.rst  nba_scraper.nba_scrapers_fixed.rst  nba_scraper.rst  nba_scraper.scraping_framework.rst
nba_scraper/: __init__.py  __main__.py  column_handlers.py  data_pipeline.py  database_schema.py  dynamic_schema.py  migration_system.py  nba_scrapers_fixed.py  scraping_framework.py
scripts/: __init__.py  dev_setup.py  docs_build.py  docs_clean.py  docs_er_diagram.py  docs_setup.py  docs_show.py  list_scripts.py  metabase.py
scripts/utils/: __init__.py  common.py  database.py  sphinx_helpers.py
statbucket/scraping/: base.py  utils.py
