[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nba-scraper"
version = "0.1.0"
description = "NBA data scraping system for basketball-reference.com"
requires-python = ">=3.9"

dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0", 
    "lxml>=4.9.0",
    "sqlalchemy>=1.4.0",
    "psycopg2-binary>=2.9.0",
    "pandas>=1.5.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
# Development Environment
dev-setup = "scripts.dev_setup:main"                     # Complete development environment configuration
list-scripts = "scripts.list_scripts:main"               # Show all custom scripts with descriptions

# Documentation Scripts  
docs-build = "scripts.docs_build:main"                   # Setup and build documentation (auto-detects what's needed)
docs-clean = "scripts.docs_clean:main"                   # Remove documentation build artifacts
docs-er-diagram = "scripts.docs_er_diagram:main"         # Generate SVG ER diagram
docs-show = "scripts.docs_show:main"                     # Open documentation (--er for ER diagram)

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.25.0", 
    "sphinx-rtd-theme>=1.3.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0", 
    "ruff>=0.1.0",
    "toml>=0.10.0",
]

[dependency-groups]
dev = [
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-rtd-theme>=3.0.2",
]
