[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "statbucket"
version = "0.1.0"
description = "NBA data scraping system for basketball-reference.com"
requires-python = ">=3.9"

dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "psycopg2-binary>=2.9.0",
    "pandas>=1.5.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "mysql-connector-python>=9.4.0",
]

[project.scripts]
# Development Environment
dev-setup = "scripts.dev_setup:main"                     # Complete development environment configuration
list-scripts = "scripts.list_scripts:main"               # Show all custom scripts with descriptions

# Documentation Scripts  
docs-build = "scripts.docs_build:main"                   # Clean, setup (if needed), and build documentation (--force-setup to regenerate structure)
docs-show = "scripts.docs_show:main"                     # Open documentation (--er for ER diagram)

# Other scripts
metabase = "scripts.metabase:main"                       # Start Metabase server for data visualization

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.25.0", 
    "sphinx-rtd-theme>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["statbucket", "scripts"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0", 
    "ruff>=0.1.0",
    "toml>=0.10.0",
]

[dependency-groups]
dev = [
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-rtd-theme>=3.0.2",
]
